[gd_scene load_steps=4 format=2]

[ext_resource path="res://Images/Smile.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Objects/ExampleMenuLabobject.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 64 )

[node name="ExampleMenuLabobject" type="RigidBody2D" groups=["LabObjects"]]
collision_layer = 2
input_pickable = true
mode = 3
can_sleep = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 0, 64 )
polygon = PoolVector2Array( -32, -32, 32, -32, 32, 32, -32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 32 )
shape = SubResource( 1 )

[node name="Menu" type="CanvasLayer" parent="."]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.0
margin_top = -313.5
margin_right = 207.0
margin_bottom = 313.5

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 407.0
margin_bottom = 620.0

[node name="Label" type="Label" parent="Menu/PanelContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 14.0
text = "This is a Menu!"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Menu/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 400.0
margin_bottom = 123.0
rect_min_size = Vector2( 400, 0 )
bbcode_enabled = true
bbcode_text = "This is a RichTextLabel. If you check \"enabled\" under \"BBCode\" in the inspector, it can do things like [color=red]c[/color][color=#ff5500]o[/color][color=yellow]l[/color][color=green]o[/color][color=blue]r[/color][color=purple]s[/color], [b][i][u][s]formatting[/s][/u][/i][/b], and other things like [url=https://docs.godotengine.org/en/3.5/tutorials/ui/bbcode_in_richtextlabel.html]this link to the Godot 3.5 documentation for using this feature.[/url]

Use the color picker below to change the color of the lab object."
text = "This is a RichTextLabel. If you check \"enabled\" under \"BBCode\" in the inspector, it can do things like colors, formatting, and other things like this link to the Godot 3.5 documentation for using this feature.

Use the color picker below to change the color of the lab object."
fit_content_height = true

[node name="ColorPicker" type="ColorPicker" parent="Menu/PanelContainer/VBoxContainer"]
margin_left = 8.0
margin_top = 135.0
margin_right = 408.0
margin_bottom = 597.0

[node name="CloseButton" type="Button" parent="Menu/PanelContainer/VBoxContainer"]
margin_top = 593.0
margin_right = 400.0
margin_bottom = 613.0
text = "Close"
icon = ExtResource( 1 )
icon_align = 2
expand_icon = true

[connection signal="meta_clicked" from="Menu/PanelContainer/VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="color_changed" from="Menu/PanelContainer/VBoxContainer/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
